@@ -5,6 +5,8 @@ New Features
 
 - heatmapOutput now uses a more accurate algorithm for determining the margins.
 
+- Terms updates. Package can recongize more cancers!
+
 
 
 
